; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_tests.c_get_catalog_dir.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_tests.c_get_catalog_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"SYSTEMD_CATALOG_DIR\00", align 1
@SYSTEMD_CATALOG_DIR = common dso_local global i8* null, align 8
@F_OK = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [59 x i8] c"ERROR: $SYSTEMD_CATALOG_DIR directory [%s] does not exist\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_catalog_dir() #0 {
  %1 = alloca i8*, align 8
  %2 = call i32 (...) @load_testdata_env()
  %3 = call i8* @getenv(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  store i8* %3, i8** %1, align 8
  %4 = load i8*, i8** %1, align 8
  %5 = icmp ne i8* %4, null
  br i1 %5, label %8, label %6

6:                                                ; preds = %0
  %7 = load i8*, i8** @SYSTEMD_CATALOG_DIR, align 8
  store i8* %7, i8** %1, align 8
  br label %8

8:                                                ; preds = %6, %0
  %9 = load i8*, i8** %1, align 8
  %10 = load i32, i32* @F_OK, align 4
  %11 = call i64 @access(i8* %9, i32 %10)
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %13, label %19

13:                                               ; preds = %8
  %14 = load i32, i32* @stderr, align 4
  %15 = load i8*, i8** %1, align 8
  %16 = call i32 @fprintf(i32 %14, i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str.1, i64 0, i64 0), i8* %15)
  %17 = load i32, i32* @EXIT_FAILURE, align 4
  %18 = call i32 @exit(i32 %17) #3
  unreachable

19:                                               ; preds = %8
  %20 = load i8*, i8** %1, align 8
  ret i8* %20
}

declare dso_local i32 @load_testdata_env(...) #1

declare dso_local i8* @getenv(i8*) #1

declare dso_local i64 @access(i8*, i32) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
